# spot2xspf

./: .cache  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-14-spot2xspf.md
docs/superpowers/specs/: 2026-05-14-spot2xspf-design.md
playlists/: Ambient_Acoustic_Drift_For_Deep_Focus_&_Creative_Flow.xspf  OpenRoadSongsRockInstrumentalsforDriving.xspf  Open_Road_Songs_Rock_Instrumentals_for_Driving.xspf
spot2xspf/: __init__.py  __main__.py  spotify.py  xspf.py
spot2xspf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_main.py  test_spotify.py  test_xspf.py
